--- a/pom.xml
+++ b/pom.xml
@@ -31,15 +31,36 @@
     </repositories>
 
     <dependencies>
-
-
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.70</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-okhttp</artifactId>
+            <version>1.25.0</version>
+        </dependency>
+                <dependency>
+                    <groupId>com.google.protobuf</groupId>
+                    <artifactId>protobuf-java</artifactId>
+                    <version>3.1.0</version>
+                </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-protobuf-lite</artifactId>
+            <version>1.25.0</version>
+                        <exclusions>
+                            <exclusion><groupId>com.google.protobuf</groupId>
+                                <artifactId>protobuf-lite</artifactId></exclusion>
+                        </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-stub</artifactId>
+            <version>1.25.0</version>
+        </dependency>
         <dependency>
             <groupId>org.hyperledger.fabric-sdk-java</groupId>
             <artifactId>fabric-sdk-java</artifactId>
@@ -48,6 +69,10 @@
                 <exclusion>
                     <groupId>com.google.api</groupId>
                     <artifactId>api-common</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.google.protobuf</groupId>
+                    <artifactId>protobuf-java</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>junit</groupId>
@@ -69,7 +94,10 @@
                     <groupId>io.grpc</groupId>
                     <artifactId>grpc-protobuf</artifactId>
                 </exclusion>
-
+                <exclusion>
+                    <groupId>com.google.protobuf</groupId>
+                    <artifactId>protobuf-java</artifactId>
+                </exclusion>
                 <exclusion>
                     <groupId>commons-cli</groupId>
                     <artifactId>commons-cli</artifactId>
@@ -166,6 +194,7 @@
             <version>4.13.1</version>
             <scope>compile</scope>
         </dependency>
+
     </dependencies>
 
     <build>
