--- a/pom.xml
+++ b/pom.xml
@@ -42,19 +42,21 @@
             <artifactId>grpc-okhttp</artifactId>
             <version>1.25.0</version>
         </dependency>
-                <dependency>
-                    <groupId>com.google.protobuf</groupId>
-                    <artifactId>protobuf-java</artifactId>
-                    <version>3.1.0</version>
-                </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.1.0</version>
+        </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf-lite</artifactId>
             <version>1.25.0</version>
-                        <exclusions>
-                            <exclusion><groupId>com.google.protobuf</groupId>
-                                <artifactId>protobuf-lite</artifactId></exclusion>
-                        </exclusions>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.protobuf</groupId>
+                    <artifactId>protobuf-lite</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
@@ -64,7 +66,7 @@
         <dependency>
             <groupId>org.hyperledger.fabric-sdk-java</groupId>
             <artifactId>fabric-sdk-java</artifactId>
-            <version>2.2.5</version>
+            <version>2.0.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.google.api</groupId>
@@ -200,7 +202,6 @@
             <version>20.2.0</version>
         </dependency>
     </dependencies>
-
 
 
     <build>
