Cancel warning prompt

--- a/pom.xml
+++ b/pom.xml
@@ -270,6 +270,12 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>bsn-sdk-java</finalName>
