--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,12 @@
         <io.grpc.version>1.55.3</io.grpc.version>
     </properties>
     <dependencies>
-
+        <!-- https://mvnrepository.com/artifact/com.baidu.xuper/xuper-java-sdk -->
+        <dependency>
+            <groupId>com.baidu.xuper</groupId>
+            <artifactId>xuper-java-sdk</artifactId>
+            <version>0.3.0</version>
+        </dependency>
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java-util</artifactId>
